# cpp-example

./: .bazelrc  .bazelrc.local.example  .clang-format  .clang-tidy  .clangd  .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  MODULE.bazel  common.sh  conanfile.py  estate_neibniz_protocolbuffers_cpp.cmake
.devcontainer/: devcontainer.json
benchmarks/: CMakeLists.txt  greeting_benchmark.cpp
ci/: gcc.Dockerfile  run_gcc_ci.sh
cmake/: Coverage.cmake  ProjectOptions.cmake  Sanitizers.cmake  Targets.cmake
docs/: build.md  clang_toolchain.md  gcc_ci_toolchain.md
include/app/: greeting.hpp
src/: BUILD.bazel  greeting.cpp  main.cpp
tests/: CMakeLists.txt  greeting_test.cpp
