
module(name = "cpp_examples", version = "0.1.0")


bazel_dep(name = "rules_cc", version = "0.2.20")
bazel_dep(name = "fmt", version = "12.1.0")


bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/helly25/bazel-compile-commands-extractor.git",
    commit = "75ba4c31d3b74fa5fb57c7508220571d4e52f828",
)