module(
    name = "cpp_examples",
    version = "0.1.0",
    bazel_compatibility = [">=9.0.0"],
)

bazel_dep(name = "rules_cc", version = "0.2.20")
bazel_dep(name = "fmt", version = "12.2.0")
bazel_dep(name = "toolchains_llvm", version = "1.8.0")

sysroot = use_repo_rule("@toolchains_llvm//toolchain:sysroot.bzl", "sysroot")

sysroot(
    name = "org_chromium_sysroot_linux_x64",
    sha256 = "84656a6df544ecef62169cfe3ab6e41bb4346a62d3ba2a045dc5a0a2ecea94a3",
    urls = [
        "https://commondatastorage.googleapis.com/chrome-linux-sysroot/toolchain/2202c161310ffde63729f29d27fe7bb24a0bc540/debian_stretch_amd64_sysroot.tar.xz",
    ],
)

sysroot(
    name = "org_chromium_sysroot_linux_arm64",
    sha256 = "e39b700d8858d18868544c8c84922f6adfa8419f3f42471b92024ba38eff7aca",
    urls = [
        "https://commondatastorage.googleapis.com/chrome-linux-sysroot/toolchain/2202c161310ffde63729f29d27fe7bb24a0bc540/debian_stretch_arm64_sysroot.tar.xz",
    ],
)

# Optional hermetic LLVM/Clang toolchain. It is intentionally not registered
# globally; use `bazel build --config=clang //...` to select it.
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    name = "llvm_toolchain",
    cxx_standard = {"": "c++20"},
    llvm_version = "22.1.7",
    stdlib = {
        "linux-aarch64": "stdc++",
        "linux-x86_64": "stdc++",
    },
)
llvm.sysroot(
    name = "llvm_toolchain",
    label = "@org_chromium_sysroot_linux_x64//sysroot",
    targets = ["linux-x86_64"],
)
llvm.sysroot(
    name = "llvm_toolchain",
    label = "@org_chromium_sysroot_linux_arm64//sysroot",
    targets = ["linux-aarch64"],
)
use_repo(llvm, "llvm_toolchain", "llvm_toolchain_llvm")

# IDE-only helper for generating compile_commands.json for clangd.
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/helly25/bazel-compile-commands-extractor.git",
    commit = "75ba4c31d3b74fa5fb57c7508220571d4e52f828",
)
